# ams-simulator

./: .gitignore  CIRCUIT_TEST_REPORT.md  COMPLETION_SUMMARY.md  CYCLE_19_SUMMARY.md  CYCLE_26_COMPLETION_REPORT.md  CYCLE_93_COMPLETION_REPORT.md  ENGINE_ENHANCEMENT_REPORT.md  FINAL_STATUS_REPORT.md  INSTALLATION_COMPLETE.md  INSTALL_NGSPICE.md  NGSPICE_SETUP_GUIDE.md  QUICKREF.md  QUICKSTART.md  README.md  STANDARD_CIRCUITS_GUIDE.md  STANDARD_CIRCUITS_QUICK_REF.md  STANDARD_CIRCUITS_STATUS.md  STANDARD_CIRCUITS_VERIFICATION.md  TASKS.md  TESTING_GUIDE.md  TEST_RESULTS.md  VERIFICATION_LOG.md  add_library_entries.py  check_catalog.py  check_failure.py  check_status.py  create_desktop_shortcut.py  debug_rtl.py  diagnose_ldo.py  direct_expand_cycle19.py  expand_chip_library.py  expand_chip_library_cycle19.py  final_catalog_validation.py  find_entries.py  find_insertion_points.py  gen_proof.py  generate_waveform_proof.py  install_ngspice.ps1  launch_ams_simulator.bat  launch_ams_simulator.pyw  (+21 more)
.github/: copilot-instructions.md
docs/: BUCK_SUMMARY.md  BUCK_WORKFLOW.md
examples/: README.md  and_gate_test.v  rc_lowpass.spice  rc_transient.spice  voltage_divider.spice
reports/: ADC_DESIGN_COMPLETE.md  CYCLE_4_COMPLETION.txt  CYCLE_6_SUMMARY.txt  CYCLE_93_COMPLETION_REPORT.md  agent_cli_handshake_prompt.md  agent_controller_state.json  agent_cycle_completion_0004.md  agent_cycle_completion_0006.md  agent_feedback_cycle_0006.md  agent_feedback_cycle_0020.md  agent_feedback_latest.json  agent_feedback_latest.md  agent_handshake_cycle_0019.json  agent_handshake_cycle_0020.json  agent_handshake_cycle_0024.json  agent_handshake_latest.json  agent_handshake_test_feedback.json  agent_handshake_test_feedback.md  agent_handshake_test_handshake.json  agent_handshake_test_prompt.md  agent_handshake_test_state.json  agent_prompt_latest.md  automotive_infotainment_soc_design_reference.html  buck_from_schematic.json  buck_from_schematic.spice  buck_validation_report.json  chip_catalog_bcd180_latest.json  chip_catalog_bcd180_latest.md  chip_catalog_generic130_latest.json  chip_catalog_generic130_latest.md  chip_catalog_latest.json  (+58 more)
(+219 files in other folders)
